# sistema_advocacia

./: .gitignore  Dockerfile  LICENSE  README.md  advocacia.sqlite3  manage.py  pyproject.toml  requirements.txt
clientes/: admin.py  forms.py  models.py  urls.py  views.py
clientes/migrations/: 0001_initial.py  0002_cliente_telefone.py  0003_auto_20201025_1539.py  0004_auto_20201125_1729.py
clientes/templates/clientes/: atualizar_cliente.html  base.html  cliente.html  editarCliente.html  endereco.html  excluir_cliente.html  index.html  listaClientes.html
processos/: admin.py  forms.py  models.py  urls.py  views.py
processos/migrations/: 0001_initial.py  0002_auto_20201125_1905.py  0003_auto_20201127_2321.py  0004_auto_20210210_1601.py  0005_remove_processo_nro_processo.py  0006_processo_finalizado.py
processos/templates/processos/: atualizar_fase.html  atualizar_processo.html  detalhe_processo.html  excluir_fase.html  excluir_processo.html  faseprocesso.html  listarprocessos.html  processo.html
sistema_advocacia/: asgi.py  settings.py  urls.py  wsgi.py
