[tool.poetry]
name = "sistema_advocacia"
version = "0.1.0"
description = "Trabalho de Conclusao de Curso de Sistema de Informação 2020"
authors = ["Sander Toledo <sanderaugusto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "3.1.1"
django-crispy-forms = "1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
