[tool.poetry]
name = "sistema_advocacia"
version = "0.1.0"
description = "Projeto realizado no Trabalho de Conclusão de Curso de 2020."
authors = ["Sander Toledo <sanderaugusto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.2"
asgiref = "3.2.10"
Django = "^3.1.1"
django-crispy-forms = "1.10.0"
Pillow = "8.1.0"
pytz = "2021.1"
reportlab = "3.5.59"
sqlparse = "0.4.1"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
